add post in blog, menu section in blog

--- a/src/blog/2015-02-19.md
+++ b/src/blog/2015-02-19.md
@@ -1,9 +1,13 @@
 ---
-title: Project update
-date: 2014-02-19
+title: God bless us ! and Heroku
+date: 2015-02-19
 author: Tony
 public: true
 ---
 
-Holly shit ! It's working bitch !
-[https://obscure-retreat-6115.herokuapp.com/](https://obscure-retreat-6115.herokuapp.com/)
+Our API Doc is currently deployed on an Heroku's server. That's mean that all of you can acceed on our marvelous documentation. Here the link : [https://obscure-retreat-6115.herokuapp.com/](https://obscure-retreat-6115.herokuapp.com/)
+
+
+Enjoy and stay tuned ;)
+
+God Bless Heroku !
