fix various little errors

--- a/src/blog/2015-02-20.md
+++ b/src/blog/2015-02-20.md
@@ -5,7 +5,7 @@ author: Tony
 public: true
 ---
 
-After a long debat with our development team, we've decided continuing to develope our API with the JavaScript technology. It's lighter, better and faster than the old Java language.
+After a long debat with our development team, we've decided continuing to develop our API with the JavaScript technology. It's lighter, better and faster than the old Java language.
 
 
 Enjoy and stay tuned ;)
