change api doc theme
steam theme like
reste les parties code et c'est bon

--- a/src/blog/2015-02-20.md
+++ b/src/blog/2015-02-20.md
@@ -5,11 +5,11 @@ author: Anthony
 public: true
 ---
 
-After a long debat with our development team, we've decided continuing to develop our API with the JavaScript technology. It's lighter, better and faster than the old Java language.
+After a long debate with our development team, we've decided continuing to develop our API with the JavaScript technology. It's lighter, better and faster than the old Java language.
 
 
 Enjoy and stay tuned ;)
 
 God Bless [Brendan Eich](http://en.wikipedia.org/wiki/Brendan_Eich) !
 
-<img src="harder_better_faster_stronger.png" class="centered_img"/>
+<img src="harder_better_faster_stronger_black.png" class="centered_img"/>
